# nao_gazebo_plugin

./: CMakeLists.txt  README.md  nao.world  package.xml
include/: NaoGazeboPlugin.h  RobotMovementInterface.h  RobotMovementPID.h
launch/: gazebo.launch
src/: NaoGazeboPlugin.cpp  RobotMovementPID.cpp
